[package]
name = "pdf-watermark-tool"
version = "0.1.0"
description = "Tauri desktop tool for adding tiled PDF watermarks"
authors = ["OpenCode"]
edition = "2021"

[lib]
name = "pdf_watermark_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
lopdf = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-dialog = "2.2.0"
